Fix(Table): table actions column takes up too much space (#267)

--- a/core/src/table/actions/actions.module.css
+++ b/core/src/table/actions/actions.module.css
@@ -3,3 +3,9 @@
 	align-items: center;
 	gap: 16px;
 }
+
+.column {
+	/* Avoid whitespace in action column
+	https://github.com/moaijs/moai/issues/229 */
+	width: 0px;
+}
